# Cancer_Risk_prediction

./: .gitignore  Cancer_Risk_Prediction.ipynb  EDA.ipynb  README.md  app.py  feature_names.pkl  main.py  model_xgb_new.pkl  pyproject.toml  requirements.txt
